--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hello love
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
+
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
+  </head>
+  <body>
+    <div id="div_title" onmouseover="unblur()" onclick="animateme()">
+      <h1 class="main_h1 noselect">EUGENE DELTA</h1>
+      <h2 class="song_h2 noselect">SO LONG</h1>
+      <p class="small_p singleP noselect">new single</p>
+      <p class="small_p comingSoonP noselect">coming soon</p>
+          
+    </div>
+    <audio id="song_player" src="soLongShort2.mp3" type="audio/mpeg"></audio>
+  </body>
+</html>
